--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
     <body>
         <div class="form">
             <div class="logo">dna-music</div>
-            <textarea name="dna" id="dna" required></textarea>
+            <textarea name="dna" id="dna" placeholder="dna sequence here: acggtagcta"></textarea>
+            <button id="randomMap">Random Note Map</button>
+            <button id="standardMap">Standard Note Map</button>
             <button id="playMelody">Play Melody</button>
             <div class="slider-label">
                 <label for="pitch">pitch:</label>
