--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Play Melody</title>
         <script src="script.js" defer></script>
+        <link rel="shortcut icon" href="deps/favicon.png" type="image/x-icon">
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
