--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Play Melody</title>
+        <title>dna-music</title>
         <script src="script.js" defer></script>
         <link rel="shortcut icon" href="deps/favicon.png" type="image/x-icon">
         <link rel="stylesheet" href="style.css">
